--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projects
                   </div>
                   <div class="project-name">
                     Cents Of Purpose
@@ -151,7 +151,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projects
                   </div>
                   <div class="project-name">
                     Early Bird
@@ -166,7 +166,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projects
                   </div>
                   <div class="project-name">
                     Movie Search
@@ -181,7 +181,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Projects
                   </div>
                   <div class="project-name">
                     Pix Mix
@@ -227,7 +227,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Please Check Out My GitHub</h2>
-        <a class="btn btn-light btn-xl sr-button" href="https://github.com/minamelosh">github logo</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://github.com/minamelosh"><input type="image" src="img/github.png" style="width:30px;height:30px;" /></a>
       </div>
     </section>
 
