--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
   
-  
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -83,7 +83,7 @@
             <img class="mina" src="img/mmelosh.jpg" atl="Mina Melosh" > </br></br></br>
             <h2 class="section-heading text-white">About Me</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Hi! My name is Mina and I am a passionate new software engineer! I recently graduated from Dev Bootcamp in SF.  I love puzzels and all things problem solving! Challenges excite me, as well as the outdoors and all things active.  DIY projects and crafts are also a hobby of mine, I like being creative and recycling. </p>
+            <p class="text-faded mb-4">Hi! My name is Mina and I am a passionate new software engineer! I recently graduated from Dev Bootcamp in San Francisco.  I love puzzels and all things problem solving! Challenges excite me, as well as the outdoors and all things active.  DIY projects and crafts are also a hobby of mine, I like being creative and recycling. </p>
             <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#skills">Get Started!</a> -->
               <div class="row no-gutters popup-gallery">
                 <!-- <a class="portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20.pdf"  alt="resume" > -->
