--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <hr class="light my-4">
             <p class="text-faded mb-4">Hi! My name is Mina and I am a passionate new software engineer! I recently graduated from Dev Bootcamp in San Francisco.  I love puzzels and all things problem solving! Challenges excite me, as well as the outdoors and all things active.  DIY projects and crafts are also a hobby of mine, I like being creative and recycling. </p>
             <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#skills">Get Started!</a> -->
-              <div class="row no-gutters popup-gallery">
-                <!-- <a class="portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20.pdf"  alt="resume" > -->
-                <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto portfolio-box" href="img/resume.png">Resume</a>
-                <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto" href="#skills">Cover Letter</a>
+              <div class="row no-gutters">
+                 <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20.pdf">Resume </a> 
+                <!--<a class="btn btn-light btn-xl col-lg-3 col-md-6 service-box mt-5 mx-auto portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20%20(1).pdf">Resume</a>-->
+                <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto" href="file:///Users/minamelosh/Downloads/Portfolio%20Cover%20Letter.pdf">Cover Letter</a>
               </div>
           </div>
         </div>
@@ -129,9 +129,9 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-briefcase text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Work Experience</h3>
-              <p class="text-muted mb-0">Finance, Research</p>
+              <p class="text-muted mb-0">Finance, Research, </br> Software Engineering</p>
             </div>
           </div>
         </div>
@@ -155,6 +155,7 @@
           <div class="col-lg-12 mx-auto text-center">
             <h2 class="section-heading text-white projects">Projects</h2>
             <hr class="light my-4">
+            <p class="text-white" >Click on any project to be redirected to the Github repo!</p>
             </div>
         </div>
       </div>
@@ -165,7 +166,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box" href="img/projects/coin.jpg"  alt="Cents of Purpose" >
+            <a class="portfolio-box grid-selector" href="https://github.com/CentsOfPurpose"  alt="Cents of Purpose" >
               <img class="img-fluid" src="img/projects/coin.jpg" alt="Cents of Purpose">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -180,7 +181,7 @@
             </a>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box" href="img/projects/earlybirdweb2.png" alt="Early Bird">
+            <a class="portfolio-box grid-selector" href="https://github.com/EarlyRavens" alt="Early Bird">
               <img class="img-fluid" src="img/projects/earlybirdweb2.png" alt="Early Bird">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -195,7 +196,7 @@
             </a>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box" href="img/projects/moviesearch.jpeg">
+            <a class="portfolio-box grid-selector" href="https://github.com/minamelosh/chronicApp">
               <img class="img-fluid" src="img/projects/moviesearch.jpeg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -210,7 +211,7 @@
             </a>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box" href="mg/projects/pixmix.png"> 
+            <a class="portfolio-box grid-selector" href="https://github.com/minamelosh/mina_be_nice"> 
               <img class="img-fluid" src="img/projects/pixmix.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -219,11 +220,14 @@
                   </div>
                   <div class="project-name">
                     Users create their own home page of their favorite Gifs! 
-                    <a href="https://www.linkedin.com/in/minamelosh/" class="icon fa fa-4x fa-github ext-primary mb-3 sr-icons"></a>
-                  </div>
+                  <!--</div>-->
+                  <!--<a href="https://www.linkedin.com/in/minamelosh/" class="icon fa fa-4x fa-github ext-primary mb-3 sr-icons"/>-->
+                    
+                  <!--</div>-->
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
           </div>
 
           <!-- <div class="col-lg-4 col-sm-6">
@@ -309,7 +313,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/creative.min.js"></script>
+    <script src="js/creative.js"></script>
 
   </body>
 
