hide cover letter

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="row no-gutters">
                  <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20.pdf">Resume </a> 
                 <!--<a class="btn btn-light btn-xl col-lg-3 col-md-6 service-box mt-5 mx-auto portfolio-box" href="file:///Users/minamelosh/Downloads/Mina%20Melosh%20Resume%20%20(1).pdf">Resume</a>-->
-                <a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto" href="file:///Users/minamelosh/Downloads/Portfolio%20Cover%20Letter.pdf">Cover Letter</a>
+                <!--<a class="btn btn-light btn-xl col-lg-3 col-md-6 ervice-box mt-5 mx-auto" href="file:///Users/minamelosh/Downloads/Portfolio%20Cover%20Letter.pdf">Cover Letter</a>-->
               </div>
           </div>
         </div>
