--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="col-lg-12 mx-auto text-center">
             <h2 class="section-heading text-white projects">Projects</h2>
             <hr class="light my-4">
-            <p class="text-white" >Click on any project to be redirected to the Github repo!</p>
+            <p class="text-white" >Click on any project to be redirected to the Github repo or the project in action!</p>
             </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
             </a>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box grid-selector" href="https://github.com/EarlyRavens" alt="Early Bird">
+            <a class="portfolio-box grid-selector" href="https://early-bird-search.herokuapp.com/" alt="Early Bird">
               <img class="img-fluid" src="img/projects/earlybirdweb2.png" alt="Early Bird">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -189,7 +189,22 @@
                     Early Bird
                   </div>
                   <div class="project-name">
-                    Allows users to be connected with companies without website, or websites that need improvement.
+                    Allows users to be connected with companies without websites, or websites that need improvement. Click here to see the live app!  Sign up, then search by zip code and buisness type to get a list of potential clients!
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-6 col-sm-6">
+            <a class="portfolio-box grid-selector" href="https://minamelosh.github.io/Melosh-In-Japan-Map/">
+              <img class="img-fluid" src="img/projects/japan.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Melosh in Japan Map
+                  </div>
+                  <div class="project-name">
+                    A Map of my trip to Japan marking the places I visited with pop-ups containing information, links, and pictures.
                   </div>
                 </div>
               </div>
@@ -204,7 +219,7 @@
                     Movie Search
                   </div>
                   <div class="project-name">
-                    A place where users can search movies, read reviews and comments as well participate in rating and commenting on movies.
+                    A place where users can search movies, read reviews and comments as well as aparticipate in rating and commenting on movies.
                   </div>
                 </div>
               </div>
