update work experience

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-briefcase text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Work Experience</h3>
-              <p class="text-muted mb-0">Finance, Research, </br> Software Engineering</p>
+              <p class="text-muted mb-0">Task Support Lead (fixing client issues), Conent Anyalst, Finance, Research, </br> Software Engineering</p>
             </div>
           </div>
         </div>
